# binaryneuralnet-asic-SKY26a

./: .gitignore  info.yaml  shell.nix
graphics_generator/: main.py  pyproject.toml
openram/: .gitignore  Makefile  OPENRAM_RUN.md  README.md  README_SKY130.md  SRAM_SKY130_GUIDE.md  common.py  rom_compiler.py  run_local.py  sram_compiler.py  test_sky130.py
openram/.github/workflows/: regress.yml
openram/compiler/: debug.py  globals.py  rom.py
openram/compiler/base/: vector.py
openram/compiler/modules/: bank.py  sram_1bank.py
openram/compiler/verify/: magic.py
openram/docs/source/: basic_setup.md  index.md  openram_dev_notes.md
openram/scripts/: analyze_openram_logs.py
openram/sky130/: CHANGELOG.md  Makefile.sky130  README.md
openram/sky130/configs/: README.md  maw_sram.py  sram_8x8_sky130.py  test_rom.hex  test_rom_sky130.py
src/: config.json  main.sv  project.sv  project.v
src/game_logic/: crosshair_control.sv  enemy_movement.sv  game_logic_pkg.sv  triangle_wave_gen.sv
src/graphics_engine/: graphics_engine_pkg.sv  render_engine.sv  vgatiming.sv
src/graphics_rom/: crosshair_sprite.sv  ghost_sprite.sv  ghost_sprite_generated.sv  graphics_rom_pkg.sv
src/graphicsengine/: graphic_consts.sv  render_engine.sv  vgatiming.sv
src/macros/: ff_macros.svh
test/: Makefile
test/runner/: executor.py
test/testbenches/: tb_vgatiming.sv
test/testmodules/: helperfunctions.py  test_vgatiming.py
ttsetup/: activate
tvsimulator/: Makefile  compile_commands.json
tvsimulator/src/: DisplayManager.cpp  DisplayManager.h  main.cpp  tb_tvsimulator.sv
(+9 files in other folders)
